Hide notification bar when their are no messages and add a max height to ensure it doesnt overflow

--- a/src/targets/meandall/styles/components/notification-bar.less
+++ b/src/targets/meandall/styles/components/notification-bar.less
@@ -2,6 +2,7 @@ notification-bar {
   position:relative;
   bottom:initial;
   border-bottom: solid 2px black;
+  max-height: 11px;
 
   .singleroom-notification,
   .multiroom-notification {
